--- a/src/sass/libs/_colors.scss
+++ b/src/sass/libs/_colors.scss
@@ -20,6 +20,7 @@ $thirdColor4: #e6fcff;
 $gray: rgb(243, 243, 243);
 $gray2: rgb(218, 218, 218);
 $backgroundGray: #d2d2d2;
+$backgroundGray2: #e7e7e7;
  
 $myWhite: #f3f3f6;
 $contentBackground: #EAEAEA;
