adding last fixed to curriculum -socialnetwork icons-

--- a/src/sass/libs/_colors.scss
+++ b/src/sass/libs/_colors.scss
@@ -12,6 +12,8 @@ $secondaryColor: #FF4369;
 $secondaryColor2: #eb2d2d;
 $secondaryColor3: #ff7e98;
 
+$skin: #ffc095;
+
 $thirdColor: rgba(168, 255, 255, 0.87);
 $thirdColor2: #aefff8;
 $thirdColor3: #caf9ff;
