--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,6 +15,11 @@
 @import "libs/articleOpen";
 @import "libs/curriculum";
 
+//fontello
+@import "libs/font/animation";
+@import "libs/font/fontello-codes";
+@import "libs/font/fontello-embedded";
+@import "libs/font/fontello";
 
 %back1 {
   background: url('/img/noise1.png'), #d2d2d2; 
