--- a/src/sass/libs/_colors.scss
+++ b/src/sass/libs/_colors.scss
@@ -1,4 +1,4 @@
-$introGray: #dadada;
+$introGray: #b3b3b3;
 
 $body: #eaeaea;
 $dat: #131618;
@@ -18,6 +18,7 @@ $thirdColor: rgba(168, 255, 255, 0.87);
 $thirdColor2: #aefff8;
 $thirdColor3: #caf9ff;
 $thirdColor4: #e6fcff;
+$thirdColor5: #cfffff;
 
 $gray: rgb(243, 243, 243);
 $gray2: rgb(218, 218, 218);
@@ -31,11 +32,11 @@ $contentBackground: #EAEAEA;
 // ---->
 // BAR CONTENT
 $background-bar-color: $backgroundGray;
-$items-colors: $mainColor;
+$items-colors: $mainColor4;
 $items-colors-over: $thirdColor4;
 
 // trigger
-$trigger-color: $mainColor;
+$trigger-color: $mainColor4;
 
 // ---->
 // ARTICLES GRID
