--- a/src/sass/libs/_footer.scss
+++ b/src/sass/libs/_footer.scss
@@ -1,11 +1,40 @@
 footer {
-  height: 500px;
+  height: 260px;
+
   .footer-wrapper {
-    .footer-logo {
+    text-align: center;
+    font-size: 1rem;
+    color: rgba($mainColor4, 0.6);
+    padding-top: 165px;
+    line-height: 1.5rem;
+    
+    .footer-content-mail {
+      font-size: 0.7rem;
+
+      .footer-mailto {
+        color: rgba($mainColor4, 1);
+        &:hover {
+          color: rgba($secondaryColor3, 1)
+        }
+      }
     }
-    .footer-contact {
+    
+    .footer-content-socialButtons {
+      font-size: 1.1rem;
+      .cv-socialnetworks-socialbag {
+        a {
+          color: rgba($mainColor4, 1);
+          &:hover {
+            color: $secondaryColor3;
+          }
+        }
+      }
     }
-    .footer-social {
+
+    .footer-content-rights {
+      color: rgba($mainColor4, 0.3);
+      margin-top: 20px;
+      font-size: 0.7rem;
     }
   }
 }
