--- a/src/sass/libs/_intro.scss
+++ b/src/sass/libs/_intro.scss
@@ -26,6 +26,7 @@
         top: 50%;
         left: 50%;
         width: 100%;
+        margin-left: -10px;
         transform: translate(-50%, -50%);
         letter-spacing: -0.12em;
         font-family: 'eleb';
