julliet, La Bogotá

--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -30,7 +30,7 @@ $width: 33.3%;
       }
       
       .grid-item{
-        box-shadow: 0 3px 0 0 rgba($mainColor, 0.25);
+        box-shadow: 0 20px 0 0 rgba($mainColor, 0.15);
         width: $width;
         overflow: hidden;
         // transition: all 0.5s;
@@ -95,7 +95,7 @@ $width: 33.3%;
                   line-height: 1.1em;
                   -webkit-font-smoothing: antialiased !important;
                   width: 70%;
-                  color: $thirdColor3;
+                  color: $backgroundGray;
                   -webkit-hyphens: auto;
                   -moz-hyphens: auto;
                   -ms-hyphens: auto;
@@ -140,7 +140,7 @@ $width: 33.3%;
                 }
               }
               .over-article-bottom {
-                width: 100%;
+                width: 92%;
                 height: 240px;
                 text-align: left;
                 
