--- a/src/sass/libs/_colors.scss
+++ b/src/sass/libs/_colors.scss
@@ -36,7 +36,8 @@ $items-colors: $mainColor4;
 $items-colors-over: $thirdColor4;
 
 // trigger
-$trigger-color: $mainColor4;
+$background-bar-trigger-color: $introGray;
+$trigger-color: $mainColor;
 
 // ---->
 // ARTICLES GRID
