--- a/src/sass/libs/font/_fontello.css
+++ b/src/sass/libs/font/_fontello.css
@@ -1,8 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?81734813');
-  src: url('../font/fontello.eot?81734813#iefix') format('embedded-opentype'),
-       url('../font/fontello.svg?81734813#fontello') format('svg');
+  src: url('../font/fontello.eot?54880232');
+  src: url('../font/fontello.eot?54880232#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?54880232') format('woff2'),
+       url('../font/fontello.woff?54880232') format('woff'),
+       url('../font/fontello.ttf?54880232') format('truetype'),
+       url('../font/fontello.svg?54880232#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -12,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?81734813#fontello') format('svg');
+    src: url('../font/fontello.svg?54880232#fontello') format('svg');
   }
 }
 */
@@ -52,6 +55,8 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
+.icon-search:before { content: '\e800'; } /* '' */
+.icon-phone:before { content: '\e801'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-github:before { content: '\f09b'; } /* '' */
